--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -33,6 +33,9 @@ ru:
       exp_duration: 'Ожидаемая продолжительность'
       pos_deviation: 'Возможное отклонение'
       act_duration: 'Фактическая продолжительность'
+      show: 'Показать'
+      edit: 'Изменить'
+      archive: 'Заархивировать'
 
   app:
     to_the_start: 'В начало'
