--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -36,6 +36,10 @@ ru:
       show: 'Показать'
       edit: 'Изменить'
       archive: 'Заархивировать'
+      back: 'Вернуться'
+      editing_goal: 'Редактировать цель'
+      no_goal: 'У вас пока ещё нет целей'
+      arch_goal: 'Заархивировать цель'
 
   app:
     to_the_start: 'В начало'
