--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -15,6 +15,9 @@ ru:
         other: "%{resource}: сохранение не удалось из-за %{count} ошибки"
 
   devise:
+    edit_user: "Редактирование пользователя"
+    del_acc: "Удалить акаунт"
+    del: "Удалить"
     failure:
       already_authenticated: "Вы уже вошли в систему."
       unauthenticated: "Вам необходимо войти в систему или зарегистрироваться."
@@ -32,6 +35,9 @@ ru:
       updated: "Ваш пароль изменён. Теперь вы вошли в систему."
       updated_not_active: 'Ваш пароль изменен.'
       send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
+      want_change: 'оставьте пустым если не хотите менять'
+      confirm_change: 'введите ваш текущий пароль, чтобы сохранить изменения'
+
     confirmations:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
