--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -40,6 +40,22 @@ ru:
       editing_goal: 'Редактировать цель'
       no_goal: 'У вас пока ещё нет целей'
       arch_goal: 'Заархивировать цель'
+      save: 'Сохранить'
 
   app:
     to_the_start: 'В начало'
+    sign_up: 'Зарегестрироваться'
+    log_in: 'Войти'
+
+  ru:
+    errors:
+      messages:
+        expired: "устарела. Пожалуйста, запросите новую"
+        not_found: "не найдена"
+        already_confirmed: "уже подтверждена. Пожалуйста, попробуйте войти в систему"
+        not_locked: "не заблокирована"
+        not_saved:
+          one: "сохранение не удалось из-за %{count} ошибки"
+          few: "сохранение не удалось из-за %{count} ошибок"
+          many: "сохранение не удалось из-за %{count} ошибок"
+          other: "сохранение не удалось из-за %{count} ошибки"
