--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -47,6 +47,7 @@ ru:
       inactive_signed_up: "Добро пожаловать! Вы успешно зарегистрировались. Но пока вы не можете войти в систему, т.к. ваша учётная запись %{reason}."
       updated: "Ваша учётная запись изменена."
       destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть вас."
+      destr_alarm: "Вы уверены?"
       reasons:
         inactive: 'неактивна'
         unconfirmed: 'не подтверждена'
