--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -43,6 +43,7 @@ en:
       confirm_change: "we need your current password to confirm your changes"
     registrations:
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
+      destr_alarm: "Are you shure?"
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
